--- a/AndroidStudio/Primera_app/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/Primera_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name = "txt_num1" >Primer número</string>
+    <string name = "txt_num2" >Segundo número</string>
+
 </resources>
