Plantanteado de otra manera para guardar info user, creado activity de registrar, hechas validaciones para avisar si los campos estan vacios..

--- a/AndroidStudio/final_app/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/final_app/app/src/main/res/values/strings.xml
@@ -3,7 +3,14 @@
     <string name="txt_usuario">Usuario</string>
     <string name="txt_password">Password</string>
     <string name="bt_validar">ACCEDER</string>
+    <string name="bt_registrar">CREAR CUENTA</string>
     <string name="created">Created_by_Amritpal_Singh</string>
     <string name="txt_bienvenida">Bienvenido/a</string>
     <string name="bt_cerrar">CERRAR</string>
+    //activity_registrar
+    <string name="txt_nom_completo">Nombre Completo</string>
+    <string name="txt_empresa">Empresa</string>
+    <string name="txt_new_usuario">Usuario</string>
+    <string name="txt_password_confirm">Confirmar password</string>
+    <string name="txt_puesto_trabajo">Puesto trabajo</string>
 </resources>
