--- a/AndroidStudio/final_app/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/final_app/app/src/main/res/values/strings.xml
@@ -11,8 +11,14 @@
     <string name="bt_cerrar">CERRAR</string>
     //activity_registrar
     <string name="txt_nom_completo">Nombre Completo</string>
+    <string name="tv_nom_completo">Nombre Completo:</string>
     <string name="txt_empresa">Empresa</string>
+    <string name="tv_empresa">Empresa:</string>
     <string name="txt_new_usuario">Usuario</string>
+    <string name="tv_new_usuario">Usuario:</string>
     <string name="txt_password_confirm">Confirmar password</string>
+    <string name="tv_password_confirm">Confirmar password:</string>
     <string name="txt_puesto_trabajo">Puesto trabajo</string>
+    <string name="tv_puesto_trabajo">Puesto trabajo:</string>
+
 </resources>
