Realizado codigo fichar para poder tener registro de entrada y salida de trabajo

--- a/AndroidStudio/final_app/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/final_app/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="txt_puesto_trabajo">Puesto trabajo</string>
     <string name="tv_puesto_trabajo">Puesto trabajo:</string>
 
+    //activity fichar
+    <string name="bt_in">IN</string>
+    <string name="bt_out">OUT</string>
+
 </resources>
