--- a/AndroidStudio/final_app/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/final_app/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     //activity fichar
     <string name="bt_in">IN</string>
     <string name="bt_out">OUT</string>
-
+    <string name="bt_registro_diario">Registro diario</string>
+    <string name="bt_registro_total">Registro total</string>
 </resources>
